--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "@material-ui/core": "^4.11.0",
+        "@material-ui/lab": "^4.0.0-alpha.56",
+        "react-router-dom": "^5.2.0"
     }
 }
