--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.1"
+        "laravel/ui": "^3.1",
+        "pusher/pusher-php-server": "~3.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
