--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "file-loader": "^6.2.0",
         "jquery": "^3.2",
         "laravel-echo": "^1.9.0",
         "laravel-mix": "^5.0.1",
@@ -29,6 +30,7 @@
     "dependencies": {
         "@material-ui/core": "^4.11.0",
         "@material-ui/lab": "^4.0.0-alpha.56",
-        "react-router-dom": "^5.2.0"
+        "react-router-dom": "^5.2.0",
+        "use-sound": "^1.0.2"
     }
 }
